Fix IR test